[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython>=0.29.30",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "fasttri"
version = "0.7.4"
description = "Python bindings for triangulation library using CGAL"
authors = [
    {name = "Zach Cobell", email = "zcobell@thewaterinstitute.org"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.19.0",
]

[tool.setuptools]
packages = ["fasttri"]
package-dir = {"fasttri" = "python"}

[tool.setuptools.package-data]
fasttri = ["*.pyx"]

[tool.cython]
language_level = "3"
